--- a/package.json
+++ b/package.json
@@ -13,16 +13,10 @@
   "scripts": {
     "build": "node build.js",
     "dev": "pnpm build && concurrently -k -p \"[{name}]\" -n \"Typescript,App\" -c \"yellow.bold,cyan.bold\" \"pnpm watch:tsc\" \"pnpm dev:start\"",
-    "dev:start": "fastify start --ignore-watch=.ts$ -w -l info -P dist/app.js",
-    "lint": "pnpm lint:eslint && pnpm lint:tsc && pnpm lint:prettier",
-    "lint:eslint": "eslint . --ext .js,.ts --fix",
-    "lint:fix": "",
-    "lint:fix:eslint": "",
-    "lint:fix:prettier": "",
-    "lint:prettier": "prettier . --write",
-    "lint:tsc": "tsc -p tsconfig.json --noEmit --incremental false",
+    "dev:start": "fastify start --ignore-watch=.ts$ -p 3003 -w -l info -P dist/app.js",
+    "lint": "eslint . --ext .js,.ts && prettier . --check && tsc -p tsconfig.json --noEmit --incremental false",
+    "lint:fix": "eslint . --ext .js,.ts --fix && prettier . --write && tsc -p tsconfig.json --noEmit --incremental false",
     "prepare": "is-ci || husky install",
-    "prettier": "prettier --write .",
     "start": "node dist/server.js",
     "watch:esbuild": "esbuild --watch --platform=node --target=es2022 --outdir=dist src/*.ts src/**/*.ts src/**/**/*.ts",
     "watch:tsc": "tsc -w -p tsconfig.json"
@@ -43,6 +37,7 @@
     "@types/node": "20.8.10",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
+    "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
     "esbuild": "^0.19.5",
     "eslint": "^8.53.0",
