feat: workflows, tests, msw, supertest

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "module": "NodeNext",
     "target": "ES2022",
     "esModuleInterop": true,
-    "skipLibCheck": false
+    "skipLibCheck": true,
+    "types": ["node", "vitest/importMeta"]
   },
   "include": ["src/**/*.ts"]
 }
