--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lint:fix": "eslint . --ext .js,.ts --fix && prettier . --write && tsc -p tsconfig.json --noEmit --incremental false",
     "prepare": "is-ci || husky install",
     "start": "node dist/server.js",
+    "test": "cross-env NODE_NO_WARNINGS=1 vitest",
     "watch:esbuild": "esbuild --watch --platform=node --target=es2022 --outdir=dist src/*.ts src/**/*.ts src/**/**/*.ts",
     "watch:tsc": "tsc -w -p tsconfig.json"
   },
@@ -35,8 +36,10 @@
     "@commitlint/config-conventional": "^18.1.0",
     "@types/eslint": "^8.44.6",
     "@types/node": "20.8.10",
+    "@types/supertest": "^2.0.15",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
+    "@vitest/coverage-v8": "1.0.0-beta.3",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
     "esbuild": "^0.19.5",
@@ -50,11 +53,15 @@
     "husky": "^8.0.3",
     "is-ci": "^3.0.1",
     "lint-staged": "^15.0.2",
+    "msw": "^2.0.3",
     "prettier": "^3.0.3",
     "prettier-plugin-packagejson": "^2.4.6",
     "rimraf": "^5.0.5",
+    "supertest": "^6.3.3",
     "typescript": "^5.2.2",
-    "vitest": "1.0.0-beta.2"
+    "vite": "^4.5.0",
+    "vite-tsconfig-paths": "^4.2.1",
+    "vitest": "1.0.0-beta.3"
   },
   "packageManager": "pnpm@8.10.2",
   "engines": {
