--- a/package.json
+++ b/package.json
@@ -23,7 +23,15 @@
     "watch:tsc": "tsc -w -p tsconfig.json"
   },
   "dependencies": {
+    "@buf/martines3000_proto-example.bufbuild_es": "1.4.2-20231107160053-20658d92a322.1",
+    "@buf/martines3000_proto-example.connectrpc_es": "1.1.3-20231107160053-20658d92a322.1",
+    "@bufbuild/protobuf": "^1.4.2",
+    "@connectrpc/connect": "^1.1.3",
+    "@connectrpc/connect-fastify": "^1.1.3",
+    "@connectrpc/connect-node": "^1.1.3",
     "@fastify/autoload": "^5.8.0",
+    "@fastify/cors": "^8.4.1",
+    "@fastify/sensible": "^5.5.0",
     "close-with-grace": "^1.2.0",
     "desm": "^1.3.0",
     "dotenv": "^16.3.1",
