--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@connectrpc/connect": "^1.1.3",
     "@connectrpc/connect-fastify": "^1.1.3",
     "@connectrpc/connect-node": "^1.1.3",
+    "@connectrpc/connect-web": "^1.1.3",
     "@fastify/autoload": "^5.8.0",
     "@fastify/cors": "^8.4.1",
     "@fastify/sensible": "^5.5.0",
@@ -42,11 +43,11 @@
   "devDependencies": {
     "@commitlint/cli": "^18.2.0",
     "@commitlint/config-conventional": "^18.1.0",
-    "@types/eslint": "^8.44.6",
-    "@types/node": "20.8.10",
-    "@types/supertest": "^2.0.15",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
+    "@types/eslint": "^8.44.7",
+    "@types/node": "20.9.0",
+    "@types/supertest": "^2.0.16",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
     "@vitest/coverage-v8": "1.0.0-beta.3",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
@@ -61,7 +62,7 @@
     "husky": "^8.0.3",
     "is-ci": "^3.0.1",
     "lint-staged": "^15.0.2",
-    "msw": "^2.0.3",
+    "msw": "^2.0.4",
     "prettier": "^3.0.3",
     "prettier-plugin-packagejson": "^2.4.6",
     "rimraf": "^5.0.5",
