--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@fastify/autoload": "^5.8.0",
     "@fastify/cors": "^8.4.1",
     "@fastify/sensible": "^5.5.0",
+    "@fastify/under-pressure": "^8.3.0",
     "close-with-grace": "^1.2.0",
     "desm": "^1.3.0",
     "dotenv": "^16.3.1",
